# quick-capture

./: .env.example  .gitignore  AGENTS.md  AGENTS.md.bkp  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.config/hypr/: quick-capture.conf
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-capture-and-enrich-mvp/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-PATTERNS.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  SKELETON.md
.planning/phases/02-wiki-sync-karakeep/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-PATTERNS.md  02-RESEARCH.md  02-VALIDATION.md
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json  session.json.1506613.1778533297252.5a8ab284.tmp
.ralph-tui/reports/: sequential-summary-01bf5f60-edc8-471b-8542-c3c6955bada7-2026-05-11T20-46-55-434Z.txt  sequential-summary-14d245c6-260e-41ae-b04a-f389ffb07438-2026-05-11T20-33-38-802Z.txt  sequential-summary-8c863d43-a8a9-4718-8e49-72246ba4716c-2026-05-11T20-15-07-208Z.txt  sequential-summary-d60512c2-d53f-437c-9759-9dec5c00265c-2026-05-11T20-13-24-415Z.txt
src/quick_capture/: __init__.py  __main__.py  capture.py  cli.py  db.py  enrich.py  karakeep.py  models.py  sync.py
tests/: conftest.py  test_capture.py  test_cli.py  test_db.py  test_enrich.py  test_karakeep.py  test_sync.py
